# slide_indexer

./: .requirements  .rules  ARCHITECTURE.md  CACHING-NOTES.md  CHANGELOG.md  INSTALLATION.md  QUICK-REFERENCE.md  README.md  TECHNICAL_SUMMARY.txt  TESTING-GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.json  vite.config.ts
data/: index.json
shared/: pdf-web.ts  search.ts  types.ts
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  models.rs  scanner.rs  state.rs
src/lib/: api.ts
src/lib/components/: HelpContent.svelte  SearchInput.svelte
