[package]
name = "slides-indexer"
version = "0.4.3"
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
globwalk = "0.8"
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
tauri = { version = "1.5", features = [ "shell-execute", "dialog-open", "fs-all", "shell-open"] }
thiserror = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3.10"
